fix: stretch small form (page) down to full window height, closes #179

--- a/src/sass/core/_layout.scss
+++ b/src/sass/core/_layout.scss
@@ -35,7 +35,7 @@ body {
     position: relative;
     text-align: left;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     max-width: $max-content-width;
     article {
         @include flex(1);
